--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,52 +1,57 @@
-cmake_minimum_required(VERSION 3.10)
-project(imgui_mac_app)
+cmake_minimum_required(VERSION 3.12)
+project(KBTools)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include(FetchContent)
+#basic libraries
+include(cmake/common.cmake)
+include(cmake/fmt.cmake)
+include(cmake/spdlog.cmake)
+include(cmake/config.cmake)
+include(cmake/opengl.cmake)
 
+#Find glfw
 find_package(glfw3 3.3 REQUIRED)
 
 # glad sources
 set(GLAD_SOURCES vendor/glad/src/glad.c)
 
-# ImGui
 set(IMGUI_SOURCES
         vendor/imgui/imgui.cpp
         vendor/imgui/imgui_demo.cpp
         vendor/imgui/imgui_draw.cpp
-        vendor/imgui/imgui_widgets.cpp
+        vendor/imgui/imgui_internal.h
         vendor/imgui/imgui_tables.cpp
+        vendor/imgui/imgui_widgets.cpp
         vendor/imgui/backends/imgui_impl_glfw.cpp
         vendor/imgui/backends/imgui_impl_opengl3.cpp
-        src/terminal_helper_example.h
 )
 
-
 set(SOURCES
-    src/main.cpp
-    src/terminal_helper_example.h)
+        src/main.cpp
+)
 
-include_directories(vendor/imterm/include)
-
-# Include spdlog
-add_subdirectory(vendor/spdlog)
-include_directories(vendor/spdlog/include)
-
-# Include fmt
-add_subdirectory(vendor/fmt)
-include_directories(vendor/fmt/include)
-
+#include imgui
+include_directories(vendor/imgui/)
 # include glad
 include_directories(vendor/glad/include)
 
-#include imgui
-include_directories(vendor/imgui)
 
+add_executable(KBTools ${SOURCES} ${IMGUI_SOURCES} ${GLAD_SOURCES})
 
-add_executable(imgui_mac_app ${SOURCES} ${IMGUI_SOURCES} ${GLAD_SOURCES})
+target_include_directories(
+        KBTools SYSTEM PRIVATE
+        ${SPDLOG_INCLUDE_DIR}
+        ${FMT_INCLUDE_DIR})
 
-target_link_libraries(imgui_mac_app glfw spdlog::spdlog fmt::fmt)
-target_include_directories(imgui_mac_app PRIVATE vendor/imterm)
-add_library(ImTerm INTERFACE)
-add_library(ImTerm::terminal ALIAS ImTerm)
+target_link_libraries(
+        KBTools PRIVATE
+        glfw)
+
+set_target_properties(
+        KBTools PROPERTIES
+        CXX_STANDARD 23
+        CXX_STANDARD_REQUIRED ON
+        CXX_EXTENSIONS OFF)
+
