Added UIWindow base Added basic terminal windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,10 @@ set(IMGUI_SOURCES
 
 set(SOURCES
         src/main.cpp
+        src/Application.cpp
+        src/Application.h
+        src/UIWindows/TerminalWindow.cpp
+        src/UIWindows/TerminalWindow.h
 )
 
 #include imgui
