--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,6 @@ include(cmake/spdlog.cmake)
 include(cmake/config.cmake)
 include(cmake/opengl.cmake)
 
-#Find glfw
-find_package(glfw3 3.3 REQUIRED)
-
-# glad sources
-set(GLAD_SOURCES vendor/glad/src/glad.c)
-
 set(IMGUI_SOURCES
         vendor/imgui/imgui.cpp
         vendor/imgui/imgui_demo.cpp
@@ -24,8 +18,9 @@ set(IMGUI_SOURCES
         vendor/imgui/imgui_internal.h
         vendor/imgui/imgui_tables.cpp
         vendor/imgui/imgui_widgets.cpp
-        vendor/imgui/backends/imgui_impl_glfw.cpp
-        vendor/imgui/backends/imgui_impl_opengl3.cpp
+        #vendor/imgui/backends/imgui_impl_glfw.cpp
+        #vendor/imgui/backends/imgui_impl_opengl3.cpp
+        #TODO: REPLACE WITH SDL
 )
 
 set(SOURCES
@@ -41,11 +36,9 @@ set(SOURCES
 
 #include imgui
 include_directories(vendor/imgui/)
-# include glad
-include_directories(vendor/glad/include)
 
 
-add_executable(KBTools ${SOURCES} ${IMGUI_SOURCES} ${GLAD_SOURCES})
+add_executable(KBTools ${SOURCES} ${IMGUI_SOURCES})
 
 target_include_directories(
         KBTools SYSTEM PRIVATE
@@ -54,8 +47,6 @@ target_include_directories(
 
 target_link_libraries(
         KBTools PRIVATE
-        glfw
-        /usr/local/Cellar/libvncserver/0.9.14_1/lib/libvncclient.dylib
 )
 
 set_target_properties(
