--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ project(KBTools)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-
 #basic libraries
 include(cmake/common.cmake)
 include(cmake/fmt.cmake)
@@ -12,9 +11,28 @@ include(cmake/spdlog.cmake)
 include(cmake/config.cmake)
 include(cmake/opengl.cmake)
 
+find_path(SDL2_IMAGE_INCLUDE_DIR SDL_image.h
+        HINTS
+        ENV SDL2IMAGEDIR
+        ENV SDL2DIR
+        ${SDL2_DIR}
+        "/usr/local/Cellar/sdl2_image/2.8.0"
+        PATH_SUFFIXES SDL2
+        # path suffixes to search inside ENV{SDL2DIR}
+        include/SDL2 include
+)
+
 
 # Find SDL2
 find_package(SDL2 REQUIRED)
+find_package(SDL2_image REQUIRED)
+
+# Find libvncserver
+find_package(libvncserver REQUIRED)
+
+
+include_directories(/usr/local/include)
+link_directories(/usr/local/lib)
 
 set(GLAD_SOURCES vendor/glad/src/glad.c)
 
@@ -52,11 +70,17 @@ set(SOURCES
         src/UIWindows/Themes/ThemeManager.h
         src/Log.cpp
         src/Log.h
+        src/stb_image.h
+        src/Shader.h
+        src/Rendering/Texture.cpp
+        src/Rendering/Texture.h
 )
 
 # Include directories
 #include_directories(vendor/imgui/ vendor/glad/include)
 include_directories(${SDL2_INCLUDE_DIRS})
+include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
+
 include_directories(vendor/imgui/)
 include_directories(vendor/glad/include)
 
@@ -65,11 +89,13 @@ add_executable(KBTools ${SOURCES} ${IMGUI_SOURCES} ${GLAD_SOURCES})
 target_include_directories(
         KBTools SYSTEM PRIVATE
         ${SPDLOG_INCLUDE_DIR}
-        ${FMT_INCLUDE_DIR})
+        ${FMT_INCLUDE_DIR}
+)
 
 target_link_libraries(
         KBTools PRIVATE
         ${SDL2_LIBRARIES}
+        ${SDL2_IMAGE_INCLUDE_DIRS}
 )
 
 set_target_properties(
