--- a/.gitmodules
+++ b/.gitmodules
@@ -16,5 +16,5 @@
     url = https://github.com/kasperhbo/Glad.git
 [submodule "vendor/imgui"]
 	path = vendor/imgui
-	url = https://github.com/kasperhbo/imgui.git
+	url = git@github.com:kasperhbo/imgui.git
 	branch = docking
