--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,28 +8,56 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/bin)
 ###################################
 ########## Modules ################
 ###################################
+#MYSQL
+
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+#add_subdirectory(vendor/mysql)
+#include(ExternalProject)
+#ExternalProject_Add(mysql
+#        SOURCE_DIR "${CMAKE_SOURCE_DIR}/vendor/mysql"
+#
+#        # Specify build configuration options
+#        CMAKE_ARGS -DDOWNLOAD_BOOST=1 -DWITH_BOOST=${CMAKE_BINARY_DIR}/boost -DWITH_LIBEVENT=bundled -DWITH_ICU=bundled
+#
+#        # Disable install step if not needed
+#        INSTALL_COMMAND ""
+#
+#        # Disable update step to speed up build
+#        UPDATE_COMMAND ""
+#
+#        # Add other necessary configuration options
+#        # ...
+#)
+
 
 ###################################
 ###### 3rd party libraries ########
 ###################################
+#boost
+set(DOWNLOAD_BOOST "1" CACHE INTERNAL "")
+set(WITH_BOOST "${CMAKE_SOURCE_DIR}/vendor/boost" CACHE INTERNAL "")
+
 ######preinstalled########
 #mysql
-find_package(MySql REQUIRED)
+add_subdirectory(vendor/mysql)
 
 ######submodules##########
 #sdl2
 add_subdirectory(vendor/sdl)
 set ( SDL2_INCLUDE_DIR vendor/sdl/include )
 set ( SDL2_LIBRARY SDL2 )
+
 #fmt
 add_subdirectory(vendor/fmt)
+
 #spdlog
 add_subdirectory(vendor/spdlog)
+
 #glad
 # Add GLAD source
 add_library(glad STATIC vendor/glad/src/glad.c)
 target_include_directories(glad PUBLIC vendor/glad/include)
+
 # Add ImGui source
 set(IMGUI_SOURCES
         vendor/imgui/imconfig.h
@@ -110,7 +138,8 @@ target_link_libraries(${PROJECT_NAME} fmt::fmt spdlog::spdlog)
 #glad
 target_link_libraries(${PROJECT_NAME} glad)
 #mysqlx
-target_link_libraries(${PROJECT_NAME} ${MySQL_LIBRARIES})
+#target_link_libraries(${PROJECT_NAME} ${MySQL_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} mysqlclient)
 #sdl2
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})
 
@@ -120,10 +149,10 @@ target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})
 ###################################
 #imgui
 include_directories(vendor/imgui)
+#mysql
+#target_include_directories(${PROJECT_NAME} PRIVATE ${MySQL_INCLUDE_DIR})
 #sdl2
 target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIR})
-#mysql
-target_include_directories(${PROJECT_NAME} PRIVATE ${MySQL_INCLUDE_DIR})
 
 ###################################
 ########## Settings ###############
