--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
     branch = master
 [submodule "vendor/sdl"]
     url = https://github.com/kasperhbo/SDL.git
-    branch = release-2.28.x
+    branch = release-2.28.xw
