--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,31 +10,6 @@ set(CMAKE_CXX_STANDARD 23)
 message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
 message("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 message("CMAKE_CURRENT_OUTPUT_DIRECTORY: ${CMAKE_CURRENT_OUTPUT_DIRECTORY}")
-#message("CMAKE_CURRENT_LIST_DIR: ${CMAKE_CURRENT_LIST_DIR}")
-#message("CMAKE_CURRENT_LIST_FILE: ${CMAKE_CURRENT_LIST_FILE}")
-#message("CMAKE_CURRENT_LIST_LINE: ${CMAKE_CURRENT_LIST_LINE}")
-#message("CMAKE_CURRENT_LIST_DIR: ${CMAKE_CURRENT_LIST_DIR}")
-#message("CMAKE_CURRENT_LIST_FILE: ${CMAKE_CURRENT_LIST_FILE}")
-#message("CMAKE_CURRENT_LIST_LINE: ${CMAKE_CURRENT_LIST_LINE}")
-#message("CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
-#message("CMAKE_ROOT: ${CMAKE_ROOT}")
-#message("CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
-#message("CMAKE_BINARY_DIR: ${CMAKE_BINARY_DIR}")
-#message("CMAKE_COMMAND: ${CMAKE_COMMAND}")
-#message("CMAKE_C_COMPILER: ${CMAKE_C_COMPILER}")
-#message("CMAKE_CXX_COMPILER: ${CMAKE_CXX_COMPILER}")
-#message("CMAKE_C_COMPILER_ID: ${CMAKE_C_COMPILER_ID}")
-#message("CMAKE_CXX_COMPILER_ID: ${CMAKE_CXX_COMPILER_ID}")
-#message("CMAKE_C_COMPILER_VERSION: ${CMAKE_C_COMPILER_VERSION}")
-#message("CMAKE_CXX_COMPILER_VERSION: ${CMAKE_CXX_COMPILER_VERSION}")
-#message("CMAKE_C_COMPILER_WORKS: ${CMAKE_C_COMPILER_WORKS}")
-#message("CMAKE_CXX_COMPILER_WORKS: ${CMAKE_CXX_COMPILER_WORKS}")
-#message("CMAKE_C_COMPILER_WORKS: ${CMAKE_C_COMPILER_WORKS}")
-#message("CMAKE_CXX_COMPILER_WORKS: ${CMAKE_CXX_COMPILER_WORKS}")
-#message("CMAKE_CXX_COMPILER_ID: ${CMAKE_CXX_COMPILER_ID}")
-#message("CMAKE_CXX_COMPILER_VERSION: ${CMAKE_CXX_COMPILER_VERSION}")
-#message("CMAKE_CXX_COMPILER_WORKS: ${CMAKE_CXX_COMPILER_WORKS}")
-#CMAKE_CURRENT_OUTPUT_DIRECTORY
 
 set(HUMMINGBIRD_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(HUMMINGBIRDCORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/HummingbirdCore)
@@ -80,7 +55,6 @@ add_library(imgui
         ${HUMMINGBIRD_DIR}/vendor/imgui/vendor/ImGuiColorTextEdit/TextEditor.cpp
 )
 
-
 ########################################################################
 # Creating the executable and libraries
 # HummingbirdCore
@@ -111,6 +85,8 @@ add_library(HummingbirdCore
         ${HUMMINGBIRDCORE_DIR}/src/GeneralTools/TextEditting/TextEditorWindow.cpp
         ${HUMMINGBIRDCORE_DIR}/src/System/Hosts/EditHostsWindow.h
         ${HUMMINGBIRDCORE_DIR}/src/System/Hosts/EditHostsWindow.cpp
+        ${HUMMINGBIRDCORE_DIR}/src/Utils/UUID.h
+        HummingBirdCore/src/ApplicationObject.h
 )
 
 # HummingbirdApp
