--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Project exclude paths
 /cmake-build-debug/
-/vendor/fmt/
-/vendor/glad/
-/vendor/imgui/
-/vendor/ImGui-Addons/
-/vendor/imguiext/
-/vendor/spdlog/
+# /vendor/fmt/
+# /vendor/glad/
+# /vendor/imgui/
+# /vendor/ImGui-Addons/
+# /vendor/imguiext/
+# /vendor/spdlog/
