Rewrite of folder, added contenexplorer

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,32 @@
 [submodule "vendor/sdl"]
     url = https://github.com/kasperhbo/SDL.git
     branch = release-2.28.xw
+
+; [submodule "Hazel/vendor/spdlog"]
+; 	path = Hazel/vendor/spdlog
+; 	url = ../../gabime/spdlog.git
+; 	branch = v1.x
+; [submodule "Hazel/vendor/GLFW"]
+; 	path = Hazel/vendor/GLFW
+; 	url = ../../TheCherno/glfw.git
+; 	branch = master
+; [submodule "Hazel/vendor/imgui"]
+; 	path = Hazel/vendor/imgui
+; 	url = ../../TheCherno/imgui.git
+; 	branch = docking
+; [submodule "Hazel/vendor/glm"]
+; 	path = Hazel/vendor/glm
+; 	url = ../../g-truc/glm.git
+; 	branch = master
+; [submodule "Hazel/vendor/yaml-cpp"]
+; 	path = Hazel/vendor/yaml-cpp
+; 	url = https://github.com/thecherno/yaml-cpp
+; [submodule "Hazel/vendor/ImGuizmo"]
+; 	path = Hazel/vendor/ImGuizmo
+; 	url = https://github.com/thecherno/imguizmo
+; [submodule "Hazel/vendor/Box2D"]
+; 	path = Hazel/vendor/Box2D
+; 	url = https://github.com/thecherno/box2d
+; [submodule "Hazel/vendor/msdf-atlas-gen"]
+; 	path = Hazel/vendor/msdf-atlas-gen
+; 	url = https://github.com/TheCherno/msdf-atlas-gen
