Added input class and possibility to kill command with ctrl c in terminal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ if (WITHHUMMINGBIRDKASPERSPECIFIC)
         ../HummingBirdKasperSpecific/src/HelloLibrary.h
         ../HummingBirdKasperSpecific/src/Hellebrekers/VisualLinkLauncher.cpp
         ../HummingBirdKasperSpecific/src/Hellebrekers/VisualLinkLauncher.h
+            HummingBirdCore/src/Utils/Input.h
     )
 
     add_library(
