--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "vendor/fmt"]
 	path = vendor/fmt
 	url = https://github.com/kasperhbo/fmt.git
+[submodule "vendor/imgui"]
+	path = vendor/imgui
+	url = git@github.com:kasperhbo/imgui.git
+	branch = docking
