--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,13 @@
 	path = vendor/imgui
 	url = git@github.com:kasperhbo/imgui.git
 	branch = docking
+[submodule "vendor/sdl"]
+	path = vendor/sdl
+	url = https://github.com/kasperhbo/SDL.git
+	branch = release-2.28.x
+[submodule "vendor/spdlog"]
+	path = vendor/spdlog
+	url = https://github.com/kasperhbo/spdlog
+[submodule "vendor/glad"]
+	path = vendor/glad
+	url = https://github.com/kasperhbo/Glad.git
