--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,8 @@
 	branch = release-2.28.x
 [submodule "vendor/spdlog"]
 	path = vendor/spdlog
-	url = https://github.com/kasperhbo/spdlog
+	url = git@github.com:kasperhbo/spdlog.git
+	branch = v1.x
 [submodule "vendor/glad"]
 	path = vendor/glad
 	url = https://github.com/kasperhbo/Glad.git
