--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 [submodule "vendor/glad"]
 	path = vendor/glad
 	url = https://github.com/kasperhbo/Glad.git
+[submodule "vendor/imgui"]
+	path = vendor/imgui
+	url = git@github.com:kasperhbo/imgui.git
+	branch = docking
+
