--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,98 +18,205 @@ set(HUMMINGBIRD_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(HUMMINGBIRDCORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/HummingbirdCore)
 set(HUMMINGBIRDFRONT_DIR ${HUMMINGBIRD_DIR}/HummingbirdFront)
 
-########################################################################
-set( SDL_STATIC ON CACHE BOOL "" FORCE )
-set( SDL_SHARED OFF CACHE BOOL "" FORCE )
-add_subdirectory( vendor/sdl sdl)
-
-# fmt
-add_subdirectory(${HUMMINGBIRD_DIR}/vendor/fmt)
-
-#glad
-add_library(glad STATIC
-        ${HUMMINGBIRD_DIR}/vendor/glad/src/glad.c
-)
-
-#spdlog
-add_subdirectory(${HUMMINGBIRD_DIR}/vendor/spdlog)
-
-#imgui
-add_library(imgui STATIC
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imgui.cpp
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imconfig.h
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imgui.cpp
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imgui.h
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imgui_demo.cpp
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imgui_draw.cpp
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imgui_internal.h
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imgui_tables.cpp
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imgui_widgets.cpp
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imstb_rectpack.h
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imstb_textedit.h
-        ${HUMMINGBIRD_DIR}/vendor/imgui/imstb_truetype.h
-        ${HUMMINGBIRD_DIR}/vendor/imgui/backends/imgui_impl_opengl3.cpp
-        ${HUMMINGBIRD_DIR}/vendor/imgui/backends/imgui_impl_opengl3.h
-        ${HUMMINGBIRD_DIR}/vendor/imgui/backends/imgui_impl_sdl2.cpp
-        ${HUMMINGBIRD_DIR}/vendor/imgui/backends/imgui_impl_sdl2.h
-        ${HUMMINGBIRD_DIR}/vendor/imgui/vendor/filedialog/FileBrowser/ImGuiFileBrowser.h
-        ${HUMMINGBIRD_DIR}/vendor/imgui/vendor/filedialog/FileBrowser/ImGuiFileBrowser.cpp
-        ${HUMMINGBIRD_DIR}/vendor/imgui/vendor/ImGuiColorTextEdit/TextEditor.h
-        ${HUMMINGBIRD_DIR}/vendor/imgui/vendor/ImGuiColorTextEdit/TextEditor.cpp
-)
-
-
-
-#link sdl to imgui
-target_link_libraries(imgui
- SDL2-static
-)
-
-########################################################################
+####MAIN PROJECT####
 # Creating the executable and libraries
+
+#include_directories(
+#        ${HUMMINGBIRD_DIR}/vendor/spdlog/include
+#        ${HUMMINGBIRD_DIR}/vendor/glad/include
+#)
+
+
 # HummingbirdCore
 add_library(HummingbirdCore STATIC
-        HummingBirdCore/src/Application.cpp
-        HummingBirdCore/src/Application.h
-        HummingBirdCore/src/Log.cpp
-        HummingBirdCore/src/Log.h
-        HummingBirdCore/src/Terminal/TerminalWindow.cpp
-        HummingBirdCore/src/Terminal/TerminalWindow.h
-        HummingBirdCore/src/UIWindows/Themes/Themes.h
-        HummingBirdCore/src/UIWindows/Themes/ThemeManager.cpp
-        HummingBirdCore/src/UIWindows/Themes/ThemeManager.h
-        HummingBirdCore/src/stb_image.h
-        HummingBirdCore/src/Rendering/Texture.cpp
-        HummingBirdCore/src/Rendering/Texture.h
-        HummingBirdCore/src/Security/LogInWindow.cpp
-        HummingBirdCore/src/Security/LogInWindow.h
-        HummingBirdCore/src/Security/LoginManager.cpp
-        HummingBirdCore/src/Security/LoginManager.h
-        HummingBirdCore/src/Sql/SqlConnection.cpp
-        HummingBirdCore/src/Sql/SqlConnection.h
-        HummingBirdCore/src/Sql/SqlExample.h
-        HummingBirdCore/src/Sql/SqlManager.cpp
-        HummingBirdCore/src/Sql/SqlManager.h
-        HummingBirdCore/src/GeneralTools/FileDialog.h
-        HummingBirdCore/src/GeneralTools/TextEditting/TextEditorWindow.h
-        HummingBirdCore/src/GeneralTools/TextEditting/TextEditorWindow.cpp
-        HummingBirdCore/src/System/Hosts/EditHostsWindow.h
-        HummingBirdCore/src/System/Hosts/EditHostsWindow.cpp
-        HummingBirdCore/src/Utils/UUID.h
-        HummingBirdCore/src/ApplicationObject.h
-        HummingBirdCore/src/UIWindows/ContentExplorer.cpp
-        HummingBirdCore/src/UIWindows/ContentExplorer.h
-        HummingBirdCore/src/Folder.h
-        HummingBirdCore/src/UIWindows/DebugWindow.h
+    HummingBirdCore/src/Application.cpp
+    HummingBirdCore/src/Application.h
+    HummingBirdCore/src/Log.cpp
+    HummingBirdCore/src/Log.h
+    HummingBirdCore/src/Terminal/TerminalWindow.cpp
+    HummingBirdCore/src/Terminal/TerminalWindow.h
+    HummingBirdCore/src/UIWindows/Themes/Themes.h
+    HummingBirdCore/src/UIWindows/Themes/ThemeManager.cpp
+    HummingBirdCore/src/UIWindows/Themes/ThemeManager.h
+    HummingBirdCore/src/stb_image.h
+    HummingBirdCore/src/Rendering/Texture.cpp
+    HummingBirdCore/src/Rendering/Texture.h
+    HummingBirdCore/src/Security/LogInWindow.cpp
+    HummingBirdCore/src/Security/LogInWindow.h
+    HummingBirdCore/src/Security/LoginManager.cpp
+    HummingBirdCore/src/Security/LoginManager.h
+    HummingBirdCore/src/Sql/SqlConnection.cpp
+    HummingBirdCore/src/Sql/SqlConnection.h
+    HummingBirdCore/src/Sql/SqlExample.h
+    HummingBirdCore/src/Sql/SqlManager.cpp
+    HummingBirdCore/src/Sql/SqlManager.h
+    HummingBirdCore/src/System/Hosts/EditHostsWindow.h
+    HummingBirdCore/src/System/Hosts/EditHostsWindow.cpp
+    HummingBirdCore/src/Utils/UUID.h
+    HummingBirdCore/src/ApplicationObject.h
+    HummingBirdCore/src/UIWindows/ContentExplorer.cpp
+    HummingBirdCore/src/UIWindows/ContentExplorer.h
+    HummingBirdCore/src/Folder.h
+    HummingBirdCore/src/UIWindows/DebugWindow.h
 )
 
 # HummingbirdApp
 add_executable(HummingbirdApp
-        ${HUMMINGBIRDFRONT_DIR}/main.cpp
+    ${HUMMINGBIRDFRONT_DIR}/main.cpp
 )
 
+# Link HummingbirdCore to HummingbirdApp
+target_link_libraries(HummingbirdApp
+    HummingbirdCore
+)
+
+# Core include directories
+include_directories(
+    HummingBirdCore/src
+)
+
+
 ########################################################################
-# Optional libraries
+# fmt
+if(NOT EXISTS ${HUMMINGBIRD_DIR}/vendor/fmt)
+    message("fmt folder not found")
+else()
+    message("fmt folder found")
+    add_subdirectory(${HUMMINGBIRD_DIR}/vendor/fmt)
+    #link
+    target_link_libraries(HummingbirdCore
+            fmt::fmt
+    )
+
+    target_link_libraries(HummingbirdApp
+            fmt::fmt
+    )
+
+    #include
+    include_directories(
+        ${HUMMINGBIRD_DIR}/vendor/fmt/include
+    )
+endif()
+
+#sdl
+if(NOT EXISTS ${HUMMINGBIRD_DIR}/vendor/sdl)
+    message("SDL folder not found")
+else()
+    message("SDL folder found needed by imgui")
+    set( SDL_STATIC ON CACHE BOOL "" FORCE )
+    set( SDL_SHARED OFF CACHE BOOL "" FORCE )
+    add_subdirectory( vendor/sdl sdl)
+
+    target_link_libraries(HummingbirdCore
+            SDL2-static
+    )
+
+    target_link_libraries(HummingbirdApp
+            SDL2-static
+    )
+
+    #include
+    include_directories(
+        ${HUMMINGBIRD_DIR}/vendor/sdl/include
+    )
+endif ()
+
+#glad
+if(NOT EXISTS ${HUMMINGBIRD_DIR}/vendor/glad)
+    message("Glad folder not found")
+else()
+    message("Glad folder found")
+    add_library(glad STATIC
+            ${HUMMINGBIRD_DIR}/vendor/glad/src/glad.c
+    )
+
+    #include glad
+    include_directories(
+            ${HUMMINGBIRD_DIR}/vendor/glad/include
+    )
+
+    # Link glad
+    target_link_libraries(HummingbirdCore
+        glad
+    )
+
+    target_link_libraries(HummingbirdApp
+        glad
+    )
+endif()
+
+#spdlog
+if(NOT EXISTS ${HUMMINGBIRD_DIR}/vendor/spdlog)
+    message("spdlog folder not found")
+else()
+    message("spdlog folder found")
+    add_subdirectory(${HUMMINGBIRD_DIR}/vendor/spdlog)
+
+    #include spdlog
+    include_directories(
+            ${HUMMINGBIRD_DIR}/vendor/spdlog/include
+    )
+
+    # Link spdlog
+    target_link_libraries(HummingbirdCore
+        spdlog::spdlog
+    )
+
+    target_link_libraries(HummingbirdApp
+        spdlog::spdlog
+    )
+endif()
+
+
+#imgui
+if(NOT EXISTS ${HUMMINGBIRD_DIR}/vendor/imgui)
+    message("Imgui folder not found")
+else()
+    add_library(imgui STATIC
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imgui.cpp
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imconfig.h
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imgui.cpp
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imgui.h
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imgui_demo.cpp
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imgui_draw.cpp
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imgui_internal.h
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imgui_tables.cpp
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imgui_widgets.cpp
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imstb_rectpack.h
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imstb_textedit.h
+            ${HUMMINGBIRD_DIR}/vendor/imgui/imstb_truetype.h
+            ${HUMMINGBIRD_DIR}/vendor/imgui/backends/imgui_impl_opengl3.cpp
+            ${HUMMINGBIRD_DIR}/vendor/imgui/backends/imgui_impl_opengl3.h
+            ${HUMMINGBIRD_DIR}/vendor/imgui/backends/imgui_impl_sdl2.cpp
+            ${HUMMINGBIRD_DIR}/vendor/imgui/backends/imgui_impl_sdl2.h
+    )
+
+    #include imgui
+    include_directories(
+            ${HUMMINGBIRD_DIR}/vendor/imgui
+    )
+
+    # Link imgui
+    target_link_libraries(HummingbirdCore
+        imgui
+    )
+
+    target_link_libraries(HummingbirdApp
+        imgui
+    )
+
+    #link sdl to imgui if sdl is valid
+    if(NOT EXISTS ${HUMMINGBIRD_DIR}/vendor/sdl)
+        message("SDL folder not found AND its needed by imgui")
+    else ()
+        message("SDL folder found")
+        target_link_libraries(imgui
+                SDL2-static
+        )
+    endif()
+endif()
+
+####kasper specific####
 option(WITHHUMMINGBIRDKASPERSPECIFIC "WITH HummingBirdKasperSpecific" OFF)
 if (WITHHUMMINGBIRDKASPERSPECIFIC)
     message("Building with Kasperspecific")
@@ -122,67 +229,38 @@ if (WITHHUMMINGBIRDKASPERSPECIFIC)
             HummingBirdCore/src/Utils/Input.h
     )
 
-        add_library(
+    add_library(
         KasperSpecificTools STATIC
         ${HUMMINGBIRDKASPERSPECIFICFILES}
     )
 
     #set cpp def
     add_definitions(-DWITHHUMMINGBIRDKASPERSPECIFIC)
+
+    #link
+    target_link_libraries(HummingbirdCore
+            KasperSpecificTools
+    )
+    target_link_libraries(HummingbirdApp
+            KasperSpecificTools
+    )
+
+    #include
+    include_directories(
+            ../HummingBirdKasperSpecific/src
+    )
 endif()
 
 ########################################################################
-# Include directories
-########################################################################
-# Include directories
-include_directories(
-        HummingBirdCore/src
-        ${HUMMINGBIRD_DIR}/vendor
-        ${HUMMINGBIRD_DIR}/vendor/fmt/include
-        ${HUMMINGBIRD_DIR}/vendor/spdlog/include
-        ${HUMMINGBIRD_DIR}/vendor/glad/include
-        ${HUMMINGBIRD_DIR}/vendor/imgui
-        ${HUMMINGBIRD_DIR}/vendor/sdl/include
-)
-
-# Include directories optional
-if(${WITHHUMMINGBIRDKASPERSPECIFIC})
-    include_directories(
-        ../HummingBirdKasperSpecific/src
-    )
-endif ()
-
-
-########################################################################
 # Base Link libraries
+#TODO: MAKE THIS MAC SPECIFIC
 target_link_libraries(HummingbirdCore
-        SDL2-static
-        ${SECURITY_FRAMEWORK}
-        fmt::fmt
-        spdlog::spdlog
-        glad
-        imgui
+    ${SECURITY_FRAMEWORK}
 )
 
 target_link_libraries(HummingbirdApp
-        HummingbirdCore
-        SDL2-static
-        ${SECURITY_FRAMEWORK}
-        fmt::fmt
-        spdlog::spdlog
-        glad
-        imgui
+    ${SECURITY_FRAMEWORK}
 )
-
-# Optional link libraries
-if(${WITHHUMMINGBIRDKASPERSPECIFIC})
-    target_link_libraries(HummingbirdCore
-        KasperSpecificTools
-    )
-    target_link_libraries(HummingbirdApp
-        KasperSpecificTools
-    )
-endif ()
 
 ########################################################################
 # Copying resources from source to build
